@@ -1,3 +1,9 @@
+2008-03-31  Brandon Hale <brandon@brandonhale.us>
+
+	Two patches from Jordan.
+	Refactor Config.cs, bug #108296.
+	Build gnome-keyring-sharp with WITH_DBUS, bug #517070.
+
 2008-03-30  Brandon Hale <brandon@brandonhale.us>
 
 	Some portability fixes.
